@@ -69,6 +69,8 @@ monster_max_aspd: 199
 //        the same skill, instead of only that particular entry (eg: Mob has heal
 //        on six lines for different conditions, when set, whenever one of the six 
 //        trigger, all of them will share the delay)
+// 0x400: When set, mobs of the same AI type are allied (by default all mobs are 
+//        enemies of each other).
 // Example: 0x140 -> Chase players through warps + use skills in random order.
 monster_ai: 0
 
